Fix long word overflowing

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -54,11 +54,12 @@
 /* TARGET */
 
 .target {
+  position: relative;
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  position: relative;
   padding: 0 3.5rem;
+  overflow-wrap: break-word;
 }
 
 .target__header {
